force-app/main/default/objects/AccountContactRelation/fields/Care_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Care_Team_Role__c</fullName>
    <label>Care Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Care Coordinator</fullName>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Emergency Contact</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Employer</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Federal Agency</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Insurance Company</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Next-of-Kin</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>State Agency</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>