force-app/main/default/objects/AccountContactRelation/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Emergency Contact</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Employer</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Federal Agency</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Insurance Company</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Next-of-Kin</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>State Agency</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>