force-app/main/default/objects/AccountContactRelation/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <formula>IF(
    NOT(ISBLANK( TEXT(Relationship__c) )),
    &quot;Household&quot;,
    IF(
        NOT(ISBLANK( TEXT(Care_Team_Role__c) )),
        &quot;Care team&quot;,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Type</label>
    <type>Text</type>
</CustomField>