force-app/main/default/objects/AccountContactRelation/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAR</fullName>
                <label>Parent</label>
            </value>
            <value>
                <fullName>SPO</fullName>
                <label>Spouse</label>
            </value>
            <value>
                <fullName>CHD</fullName>
                <label>Child</label>
            </value>
            <value>
                <fullName>SIB</fullName>
                <label>Sibling</label>
            </value>
            <value>
                <fullName>GRP</fullName>
                <label>Grandparent</label>
            </value>
            <value>
                <fullName>FND</fullName>
                <label>Friend</label>
            </value>
            <value>
                <fullName>ASC</fullName>
                <label>Associate</label>
            </value>
            <value>
                <fullName>BRO</fullName>
                <label>Brother</label>
            </value>
            <value>
                <fullName>CGV</fullName>
                <label>Care giver</label>
            </value>
            <value>
                <fullName>DEP</fullName>
                <label>Handicapped dependent</label>
            </value>
            <value>
                <fullName>DOM</fullName>
                <label>Life partner</label>
            </value>
            <value>
                <fullName>EMC</fullName>
                <label>Emergency contact</label>
            </value>
            <value>
                <fullName>EME</fullName>
                <label>Employee</label>
            </value>
            <value>
                <fullName>EMR</fullName>
                <label>Employer</label>
            </value>
            <value>
                <fullName>EXF</fullName>
                <label>Extended family</label>
            </value>
            <value>
                <fullName>FCH</fullName>
                <label>Foster child</label>
            </value>
            <value>
                <fullName>FTH</fullName>
                <label>Father</label>
            </value>
            <value>
                <fullName>GCH</fullName>
                <label>Grandchild</label>
            </value>
            <value>
                <fullName>GRD</fullName>
                <label>Guardian</label>
            </value>
            <value>
                <fullName>MGR</fullName>
                <label>Manager</label>
            </value>
            <value>
                <fullName>MTH</fullName>
                <label>Mother</label>
            </value>
            <value>
                <fullName>NCH</fullName>
                <label>Natural child</label>
            </value>
            <value>
                <fullName>NON</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>OAD</fullName>
                <label>Other adult</label>
            </value>
            <value>
                <fullName>OTH</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>OWN</fullName>
                <label>Owner</label>
            </value>
            <value>
                <fullName>SCH</fullName>
                <label>Stepchild</label>
            </value>
            <value>
                <fullName>SEL</fullName>
                <label>Self</label>
            </value>
            <value>
                <fullName>SIS</fullName>
                <label>Sister</label>
            </value>
            <value>
                <fullName>TRA</fullName>
                <label>Trainer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>