force-app/main/default/objects/AccountContactRelation/validationRules/Validate_Care_Team_Role_and_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Care_Team_Role_and_Relationship</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(TEXT(Care_Team_Role__c))),
NOT(ISBLANK(TEXT(Relationship__c)))
)</errorConditionFormula>
    <errorMessage>You cannot have values in both Relationship and Care Team Role fields</errorMessage>
</ValidationRule>